--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  
+  firebase_auth: "^0.18.1+1"
+  firebase_core: "^0.5.0"
+  cloud_firestore: "^0.14.1+1"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  hexcolor: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +59,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+   - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
