--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: myapp
+name: mygreenapp
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0-223.0.dev <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,14 +29,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  firebase_auth: "^0.18.1+1"
-  firebase_core: "^0.5.0"
-  cloud_firestore: "^0.14.1+1"
+  map_mvvm:
+    path: packages/map_mvvm
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  hexcolor: ^2.0.7
+  firebase_core: ^1.16.0
+  firebase_database: ^9.0.13
+  firebase_auth: ^3.3.17
+  flutter_native_splash: ^2.1.6
+  cloud_firestore: ^3.1.13
 
 dev_dependencies:
   flutter_test:
@@ -52,13 +54,14 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
   assets:
    - assets/
   # To add assets to your application, add an assets section, like this:
