--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^3.3.17
   flutter_native_splash: ^2.1.6
   cloud_firestore: ^3.1.13
+  get_it: ^7.1.3
 
 dev_dependencies:
   flutter_test:
