--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_native_splash: ^2.1.6
   cloud_firestore: ^3.1.13
   get_it: ^7.1.3
+  get: ^4.6.1
+  rflutter_alert: ^2.0.4
 
 dev_dependencies:
   flutter_test:
