--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_maps_flutter: ^2.1.6
   geolocator: ^8.2.1
   path: ^1.8.1
+  firebase_image: ^1.1.1
 
 dev_dependencies:
   flutter_test:
