sprint_3_merge_with_st_part

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   geolocator: ^8.2.1
   path: ^1.8.1
   firebase_image: ^1.1.1
+  datetime_picker_formfield: ^2.0.0
 
 dev_dependencies:
   flutter_test:
