--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   geolocator: ^8.2.1
   path: ^1.8.1
   firebase_image: ^1.1.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
