--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   firebase_image: ^1.1.1
   datetime_picker_formfield: ^2.0.0
   intl: ^0.17.0
+  firebase_messaging: ^11.4.2
+  overlay_support: ^2.0.1
+  flutter_local_notifications: ^9.6.1
 
 dev_dependencies:
   flutter_test:
