--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_image: ^1.1.1
   datetime_picker_formfield: ^2.0.0
   intl: ^0.17.0
+  flutter_launch: ^0.3.0
 
 dev_dependencies:
   flutter_test:
