--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   firebase_messaging: ^11.4.2
   overlay_support: ^2.0.1
   flutter_local_notifications: ^9.6.1
+  quiver: ^3.1.0
 
 dev_dependencies:
   flutter_test:
